micro-service-starter/kubernetes_code/zuul-api-gateway/deployment-zuul.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zuul-deployment
  labels:
    app: zuul
spec:
  replicas: 1
  selector:
    matchLabels:
     app: zuul
  template:
    metadata:
      labels:
        app: zuul
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes-training
                operator: In
                values:
                  - success
      containers:
      - name: zuul
        image: docker.io/aricentdocker/zuul:1
        ports:
        - containerPort: 9999
          
---

apiVersion: v1
kind: Service
metadata:
  name: zuul-api-gateway-service
  labels:
    app: zuul
spec:
  type: NodePort
  selector:
    app: zuul
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9999
      nodePort: 30007
