micro-service-starter/kubernetes_code/zuul-api-gateway/zuul-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zuul-api-gateway-service
spec:
  rules:
  -  http:
       paths:
       -  path: /offer/**
          backend:
            serviceName: offers-service
            servicePort: 80
  -  http:
       paths:
       -  path: /shoe/**
          backend:
            serviceName: shoes-service
            servicePort: 80
